fix home page banner z-indexes

--- a/src/components/additional/BookingBlock/BookingBlock.module.scss
+++ b/src/components/additional/BookingBlock/BookingBlock.module.scss
@@ -9,7 +9,7 @@
   box-shadow: -6.156px 16.914px 40px 0px rgba(23, 23, 23, 0.13);
   background-color: white;
   border-radius: 5px;
-  z-index: 1;
+  z-index: 2;
 }
 
 @media screen and (max-width: 620px) {
